# igpsport-map-updater

./: .gitattributes  .gitignore  CHANGELOG.md  INVESTIGATION.md  README.md  generate_maps_csv.py  pyproject.toml  run.ps1  run.sh  runtest.sh  script.ps1  script.sh  test_generate_maps_csv.py
.github/workflows/: test.yml
misc/: dump_mapheader.py  option-3-multi-region-plan.md  patch_map_bbox.py  read_map_bbox.py
specs/003-osmium-preclip-equivalence/: tasks.md
